--- a/Javascript/2.object.this.md
+++ b/Javascript/2.object.this.md
@@ -1,1 +1,65 @@
 
+**I. Object methods, "this" :**
+
+  *1. start:*
+  
+  ``` 
+    let user = {
+        name: "Jonh",
+        age :30
+        };
+   ```
+   *2. example:*
+   
+   ``` 
+    let user ={
+    name: "Jonh",
+    age: 30
+    };
+    user.sayHi=function(){
+    alert("hello");
+    };
+    user.sayHi(); //hello
+   ```
+   *3. Method shorthand:(phương thức ngắn gọn)*
+   
+   We can omit(bỏ qua) `function` and just write `sayHi()`.
+   
+   ```
+    let user ={ 
+      sayHi: function(){
+        alert("hello");
+      }
+      };
+      
+     // method shorthand lools better, right?
+     
+     let user={
+      sayHi(){ //same as "sayHi: function()"
+        alert("hello");
+     }
+     }
+    ```
+    
+    **4. "this" in methods:**
+    
+      ```
+        let user = {
+          name: "Jonh",
+          age: 30,
+          
+          sayHi(){
+            alert(this.name);
+            alert(this.age);
+            }
+            };
+           user.sayHi(); // Jonh and 30
+       ```
+       here, `this` will be `user`
+       
+       
+          
+    
+    
+        
+ 
