--- a/Javascript/2.object.this.md
+++ b/Javascript/2.object.this.md
@@ -40,10 +40,9 @@
      }
      }
     ```
+    *4. "this" in methods:*
     
-    **4. "this" in methods:**
-    
-      ```
+     ```
         let user = {
           name: "Jonh",
           age: 30,
@@ -54,7 +53,7 @@
             }
             };
            user.sayHi(); // Jonh and 30
-       ```
+      ```
        here, `this` will be `user`
        
        
