--- a/Javascript/2.object.this.md
+++ b/Javascript/2.object.this.md
@@ -40,7 +40,7 @@
      }
      }
    ```
-    *4. "this" in methods:*
+   *4. "this" in methods:*
     
      ```
         let user = {
@@ -54,7 +54,7 @@
             };
            user.sayHi(); // Jonh and 30
       ```
-       here, `this` will be `user`
+    Here, `this` will be `user`
        
        
           
