--- a/Javascript/2.object.this.md
+++ b/Javascript/2.object.this.md
@@ -1,7 +1,7 @@
 
 **I. Object methods, "this" :**
 
-  *1. start:*
+  ***1. start:***
   
   ``` 
     let user = {
@@ -9,7 +9,7 @@
         age :30
         };
    ```
-   *2. example:*
+   ***2. example:***
    
    ``` 
     let user ={
@@ -21,7 +21,7 @@
     };
     user.sayHi(); //hello
    ```
-   *3. Method shorthand:(phương thức ngắn gọn)*
+   ***3. Method shorthand:(phương thức ngắn gọn)***
    
    We can omit(bỏ qua) `function` and just write `sayHi()`.
    
@@ -40,7 +40,7 @@
      }
      }
    ```
-   *4. "this" in methods:*
+   ***4. "this" in methods:***
     
      ```
         let user = {
