--- a/Javascript/2.object.this.md
+++ b/Javascript/2.object.this.md
@@ -57,7 +57,22 @@
    
    Here, `this` will be `user`
        
-       
+**II. constructor, operator "new":**
+
+  ***1. constructor function:***
+  
+    ```
+    function User(name){
+       this.name=name;
+       this.isAdmin=false;
+       }
+    let user=new User("jack");
+    alert(user.name); //jack
+    alert(user.isAdmin);//false
+    ```
+    use `new user` change for `this`
+    
+    
           
     
     
