--- a/Javascript/3. Change.md
+++ b/Javascript/3. Change.md
@@ -1,1 +1,24 @@
 
+**1. Chuyển đổi chữ thường sang chữ hoa: **
+  
+ - Dùng hàm `object.toUpperCase()`
+ 
+ VD: 
+ 
+ ```
+  let str= "Hello";
+  alert(str.toUpperCase());
+  //print: HELLO
+  ```
+  
+**2. Lấy chữ số thập phân: **
+
+   Dùng hàm: `   .toFixed() `
+   
+VD: 
+  ```
+  let n=1.23456;
+  alert(n.toFixed(2));
+  ```
+  
+  
