--- a/Javascript/3. Change.md
+++ b/Javascript/3. Change.md
@@ -1,4 +1,3 @@
-
 **1. Chuyển đổi chữ thường sang chữ hoa: **
   
  - Dùng hàm `object.toUpperCase()`
@@ -9,7 +8,7 @@
   let str= "Hello";
   alert(str.toUpperCase());
   //print: HELLO
-  ```
+ ```
   
 **2. Lấy chữ số thập phân: **
 
@@ -19,6 +18,7 @@ VD:
   ```
   let n=1.23456;
   alert(n.toFixed(2));
+  //print: 1.23
   ```
   
   
