Update 4. pop, push, shift,unshift.md

--- a/Javascript/4. pop, push, shift,unshift.md
+++ b/Javascript/4. pop, push, shift,unshift.md
@@ -1,1 +1,56 @@
 
+
+
+- `push` : thêm vào phần tử cuối cùng
+
+VD: 
+
+```
+let fruits=["Apple","Orange"];
+
+fruits.push("pear");
+
+alert(fruits);
+
+//print: Apple, Orange, pear
+
+```
+
+- `pop` : xóa một phần tử cuối cùng
+
+VD: 
+
+```
+let fruits=["apple", "orange", "pear"];
+
+alert(fruits.pop()); // print: remove "pear" and alert it
+
+alert(fruits); // apple, orange
+
+```
+
+- `shift` : xóa phần tử đầu tiên
+
+VD: 
+
+```
+let fruits=["apple","orange","pear"];
+
+alert(fruits.shift()); //remove apple and alert it
+
+alert(fruits); // print: orange, pear
+
+```
+
+- `unshift`: thêm vào phần tử đầu tiên
+
+VD: 
+
+```
+let fruits=["orange","pear"];
+
+fruits.unshift('apple');
+
+alert(fruits); //apple, orange,pear
+
+```
