--- a/CSS/2.style.md
+++ b/CSS/2.style.md
@@ -1,1 +1,9 @@
 
+- tô đậm : ` font-wight: bold`
+
+- khoảng cách giữ các dòng: `text- alight : ..px`
+
+- thêm ảnh vào nền : `background: url()`
+
+- màu sắc: `color`
+
