--- a/Javascript/4. array.md
+++ b/Javascript/4. array.md
@@ -1,1 +1,152 @@
 
+## 1.New Array():
+
+``` let arr= new Array("apple", "arange");```
+
+we can change betweeen `()` and `[]`
+
+ở đây mãng nó chửa phần tử, hay đã được cho phần tử, số lượng phần tử vào trong rồi.
+
+```
+let arr =new Array(2);
+
+alert(arr[0]); // vì chưa gán phần tử thứ nhất bằng bao nhiêu nên khi alert sẽ undefined
+
+alert(arr.length); //length 2
+
+```
+
+## 2. multidimentional arrays: (mãng đa chiều)
+
+``` 
+let matrix = [
+  [1, 2, 3],
+  [4, 5, 6],
+  [7, 8, 9]
+  ];
+  
+  alert(matrix[1][1]); // nó sẽ in ra là 5 . 
+  
+  từ phần tử đầu tiên thì nó là [0][0], rồi đến [0,1], [0,2]
+  
+```
+
+- you want print all array, you can: 
+
+```
+let arr= [1, 2, 3];
+
+alert(arr); //1,2,3
+
+alert(String(arr)==='1,2,3');//true
+
+```
+
+- then you add: 
+
+``` 
+let arr= [1, 2, 3];
+
+alert( [] +1); //   "1"
+
+alert([1] + 1); //  "11"
+
+alert([1,2] +1); //  "1,21"
+
+```
+here `[]`== `""`
+
+VD: ```alert(""+1); //   "1"```
+
+## Task: 
+
+  ### 1: what this code is going to show? 
+  
+  ``` 
+  let fruits =["apple", "pear", "orange"];
+  
+  // push a new value into the "copy"
+  
+  let shoppingCart= fruits;
+  
+  shoppingCart.push("Banana");
+  
+  // what is in fruits?
+  alert(fruits.length); //?
+  
+  ```
+  
+  `?` : apple, pear, orange, Banana and `alert: 4`
+  
+  ### 2. Array operations. 
+  
+  Let's try 5 array operations. 
+  
+    1. create an array `styles` with items "Jazz" and "Blues".
+    
+    2. Append (nối) " Rock-n-Roll" to the end.
+    
+    3. Replace the value in the middle by " Classics". Your code for finding the middle value should work for any arrays with odd length.
+    
+    4. Strip off the frist value of the array and show it.
+    
+    5. add `Rap` and `Reggie` to the array 
+    
+    ```
+    Jazz, Blues
+    Jazz, Blues, Rock-n-Roll
+    Jazz, Classics, Rock-n-Roll
+    Classics, Rock-n-Roll
+    Rap, Reggie, Classics, Rock-n-Roll
+    ```
+==> Task: 
+
+*1 : create an array `styles` with items "Jazz" and "Blues".*
+
+```
+let style=["Jazz","Blues"];
+```
+
+*2. Append (nối) " Rock-n-Roll" to the end.
+
+```
+let style=[jazz", "Blues"];
+style.push("Rock-n-Roll");
+```
+
+*3. Replace the value in the middle by " Classics". Your code for finding the middle value should work for any arrays with odd length.*
+
+```
+let style=[jazz", "Blues"]; //Jazz, Blues
+style.push("Rock-n-Roll"); //Jazz, Blues, Rock-n-Roll
+style[(style.length +1)/2]="Classics";
+
+```
+
+*4.Strip off the frist value of the array and show it.
+
+```
+let style=[jazz", "Blues"]; //Jazz, Blues
+style.push("Rock-n-Roll"); //Jazz, Blues, Rock-n-Roll
+style[(style.length +1)/2]="Classics";
+style.shift("Jazz");       //Classics, Rock-n-Roll
+```
+
+*5. add `Rap` and `Reggie` to the array *
+
+```
+let style=[jazz", "Blues"]; //Jazz, Blues
+style.push("Rock-n-Roll"); //Jazz, Blues, Rock-n-Roll
+style[(style.length +1)/2]="Classics";
+style.shift("Jazz");       //Classics, Rock-n-Roll
+style.unshift("Rap","Reggie"); // Rap, Reggie, Classics, Rock-n-Roll
+```
+
+
+
+
+
+    
+  
+
+
