--- a/Javascript/4. array.md
+++ b/Javascript/4. array.md
@@ -107,7 +107,7 @@ VD: ```alert(""+1); //   "1"```
 let style=["Jazz","Blues"];
 ```
 
-*2. Append (nối) " Rock-n-Roll" to the end.
+*2. Append (nối) " Rock-n-Roll" to the end.*
 
 ```
 let style=[jazz", "Blues"];
@@ -123,7 +123,7 @@ style[(style.length +1)/2]="Classics";
 
 ```
 
-*4.Strip off the frist value of the array and show it.
+*4.Strip off the frist value of the array and show it.*
 
 ```
 let style=[jazz", "Blues"]; //Jazz, Blues
