Update 5. Array Methods.md

--- a/Javascript/5. Array Methods.md
+++ b/Javascript/5. Array Methods.md
@@ -1,1 +1,195 @@
+## I. Add and Remove items: 
 
+we can add and remove by: 
+
+- arr.push()
+- arr.pop()
+- arr.shift()
+- arr.unshift()
+
+but, we can by:
+
+### 1. splice
+
+*How to delete an element from the array? *
+
+you can use `delete`:
+
+```
+let arr = ["I","go","home"];
+
+delete arr[1]; //remove "go"
+
+alert(arr[1]); //undefined
+
+//now arr= ["I","home"];
+alert(arr.length); //3
+```
+
+we don't use `delete`, so we can use `splice` because we use `delete` don't replace value.
+
+***Now**:
+
+Syntax:  ``` arr.splice(index[,deleteCount, elem1, ... , elemN]);```
+
+Explain: 
+
+- index: bat dau tu vi tri nao? 
+- deleteCount : remove object
+
+EX1: 
+
+```
+let arr=["I","study","Javascript"];
+
+arr.splice(1,1); //from index 1 remove 1 element
+
+alert (arr); //  ["I", Javascript"]
+
+```
+
+EX2: removed n fist element and see removed:
+
+```
+let arr=["le","thi","Dieu","thuy"];
+
+let removed= arr.splice(0,2); //removed "le","thi"
+
+alert( removed); // "le","thi"
+
+alert(arr); // "Dieu","thuy"
+```
+
+EX3: removed n first element and replace items. 
+
+``` 
+let arr= ["I","study", "Javascript", "right","now"];
+
+arr.splice(0,3, "let's","dance"); index: 0 , remove 3 firts element and replace by another
+
+alert(arr) //now print: ["let's", "dance", "right", "now"]
+
+```
+
+   ### 2.Concat: (ket hop)
+   
+   *syntax* : ```arr.concat(arg1,arg2...);```
+   
+   Example: 
+   
+   ```
+   let arr=[1,2];
+   
+   alert( arr.concat([3,4])); //1,2,3,4
+   
+   alert( arr.concat([5,6],[7,8])); // 1,2,3,4,5,6,7,8
+   
+   alert( arr.concat( [9,10],11,12)); // 1,2,3,4,5,6,7,8,9,10,11,12
+   
+   ```
+   
+## II. Searching in array: 
+
+  ### 1. indexOf/ lastIndexOf and includes: 
+  
+  *syntax:* 
+  - ` arr.indexOf(item, from) ` looks for `item` starting from index `from`, and returns the index where it was found, otheriwse `-1-`.
+  - `arr.includes(item, from)` - looks for `item` starting fron index `from`, returns `true` if found.
+  
+for instance: 
+
+```
+let arr =[1, 0, false];
+
+alert( arr.indexOf(0) ); //1
+alert( arr.indexOf(false)); //2
+alert ( arr.indexOf(null) ); //-1
+
+alert( arr.includes (-1) ); //true
+```
+
+  ### 2. find and findlndex: 
+  
+  imagine we have an array of object. how do we find and object with the sprcific condition? 
+  
+  *syntax: * `arr.find`
+  
+  ```
+  let result = arr.find(function(item, index, array)
+  {
+  // should return true if the item is what we are looking for
+  });
+  ```
+  +  `item` is the element
+  +  ` index` is its index
+  +  ` array` is the array itself
+  
+  if it return `true`, the search is ***stopped***
+  
+  ***for example: ***
+  
+  ```
+  let user = [
+  {id: 1, name: "john"},
+  {id: 2, name: "pete"},
+  {id: 3, name: "mary"}
+  ];
+  let user = users.find(item => item.id=1);
+  
+  alert(user.name); //john
+  ```
+  
+## III. Transform an array: 
+
+  ### 1. map: ( kiểm tra độ dài của phần tử).
+  
+  ví dụ: thuy thì có 4 kí tự. dộ dài =4
+  
+  ```
+  let lengths= [" bilbo", "gandalf", "nazgul"].map(item ==>item.length)
+  alert(lengths);//5,6,7
+  ```
+  
+  ### 2. sort(fn) (sắp xếp) 
+  
+  *syntax:* `arr.sort()`
+  
+  ``` 
+  function compare(a, b){
+  if (a>b) return 1; // at place number one
+  if(a==b) return 0;
+  if(a<b) return -1;
+  }
+  ```
+  
+  ***for example: ***
+  
+  ```
+  function compareNumber(a, b) {
+    if(a>b) return 1;
+    if(a==b) return 0;
+    if(a<b) return -1;
+    }
+    let arr= [1, 2, 15];
+    arr.sort(compareNumber);
+    
+    alert (arr); // 1,2,15
+    ```
+  
+  *syntax*: `arr.reverse()`
+  
+  Sắp xếp theo chiều giảm dần.
+  
+  ```
+  let arr = [1,2,3,4,5,6];
+  
+  alert(arr.reverse() );
+  //6,5,4,3,2,1
+  ```
+  
+  
+  
+  
+  
+   
+   
