Update 5. Array Methods.md

--- a/Javascript/5. Array Methods.md
+++ b/Javascript/5. Array Methods.md
@@ -28,7 +28,7 @@ alert(arr.length); //3
 
 we don't use `delete`, so we can use `splice` because we use `delete` don't replace value.
 
-***Now**:
+***Now***:
 
 Syntax:  ``` arr.splice(index[,deleteCount, elem1, ... , elemN]);```
 
@@ -146,8 +146,10 @@ alert( arr.includes (-1) ); //true
   ví dụ: thuy thì có 4 kí tự. dộ dài =4
   
   ```
+  
   let lengths= [" bilbo", "gandalf", "nazgul"].map(item ==>item.length)
-  alert(lengths);//5,6,7
+  alert(lengths);    //5,6,7
+  
   ```
   
   ### 2. sort(fn) (sắp xếp) 
@@ -162,8 +164,7 @@ alert( arr.includes (-1) ); //true
   }
   ```
   
-  ***for example: ***
-  
+   *for example: * 
   ```
   function compareNumber(a, b) {
     if(a>b) return 1;
@@ -178,14 +179,15 @@ alert( arr.includes (-1) ); //true
   
   *syntax*: `arr.reverse()`
   
-  Sắp xếp theo chiều giảm dần.
+   - Sắp xếp theo chiều giảm dần.
   
-  ```
-  let arr = [1,2,3,4,5,6];
+   ```
+   let arr = [1,2,3,4,5,6];
   
-  alert(arr.reverse() );
-  //6,5,4,3,2,1
-  ```
+   alert(arr.reverse() );
+   //6,5,4,3,2,1.
+  
+   ```
   
   
   
