Update 5. Array Methods.md

--- a/Javascript/5. Array Methods.md
+++ b/Javascript/5. Array Methods.md
@@ -165,8 +165,9 @@ alert( arr.includes (-1) ); //true
   ```
   
    *for example: * 
+   
   ```
-  function compareNumber(a, b) {
+    function compareNumber(a, b) {
     if(a>b) return 1;
     if(a==b) return 0;
     if(a<b) return -1;
@@ -175,11 +176,11 @@ alert( arr.includes (-1) ); //true
     arr.sort(compareNumber);
     
     alert (arr); // 1,2,15
-    ```
+   ```
   
-  *syntax*: `arr.reverse()`
+   *syntax*: `arr.reverse()`
   
-   - Sắp xếp theo chiều giảm dần.
+    Sắp xếp theo chiều giảm dần.
   
    ```
    let arr = [1,2,3,4,5,6];
