--- a/Javascript/6.event.md
+++ b/Javascript/6.event.md
@@ -1,1 +1,26 @@
 
+# All Event important
+
+
+|***Tên Sự Kiện***|                   ***Chỉ áp dụng cho phần tử***                 |                    ***Mô tả***                |
+|-----------------|-----------------------------------------------------------------|-----------------------------------------------|
+|Onclick          |button, radio button, check box, submit button, reset button,link|khi người sử dụng kích chuột trái vào phần tử  |
+|Onblur           |Window, frame,all form element                                   |khi phần tử bị mất focus                       |
+|Onabort          |                        image                                    |khi hủy bỏ việc tải 1 hình ảnh                 |
+|Onchange         |            test field, textarea, select list                    |khi thay đổi giá trị phần tử                   |
+|Onload           | document, applet, frameset, img, link,object,scritp,style,window|khi tài liệu được trình duyệt nạp xong         |
+|Onmousedown      |           button, document, link                                |khi ấn nút con chuột                           |
+|Onmouse          |          area, layer, link                                      |khi di chuyển con chuột khắp một phần tử       |
+|Onmouseup        |             button, document, link                              |khi người sử dụng nhã nút con chuột đã ấn      |
+|Onreset          |                    Form                                         |khi người sử dụng click vào nút reset form     |
+|Onresize         |             window, frame                                       |khi kéo dãn cửa sổ hoặt một khung              |
+|Onsubmit         |              from                                               |khi người sử dụng click vào nút submit của form|
+|Onunload         |            document, frameset, image, window                    |khi người sử dụng chuyển sang mở một trang khác|
+
+
+
+
+
+
+
+
