--- a/Javascript/3. Change.md
+++ b/Javascript/3. Change.md
@@ -1,4 +1,4 @@
-**1. Chuyển đổi chữ thường sang chữ hoa: **
+## 1. Chuyển đổi chữ thường sang chữ hoa:
   
  - Dùng hàm `object.toUpperCase()`
  
@@ -10,7 +10,7 @@
   //print: HELLO
  ```
   
-**2. Lấy chữ số thập phân: **
+## 2. Lấy chữ số thập phân:
 
    Dùng hàm: `   .toFixed() `
    
