Update 7. Date and Time.md

--- a/Javascript/7. Date and Time.md
+++ b/Javascript/7. Date and Time.md
@@ -1,1 +1,35 @@
 
+# I. Creation:
+
+- You want create a new `Date` object call `new Date()` with one of the following argument 
+
+## 1)  `New Date`
+
+```
+let now = new date();
+
+alert(now); // shows current date/time
+```
+
+## 2) `new Date(datestring)`
+
+```
+let date= new Date("2017-10-17");
+alert(date);
+```
+
+## 3) `new Date(year, date, hours, minutes, seconds, ms)`
+
+
+# II. Setting date components:
+
+```
+let today = new Date();
+
+today.setHours(0);
+alert(today);     // still today, but the hour í changed to 0
+
+today.setHours (0,0,0,0);
+alert(today);     // still today, now 00:00:00 sharp
+```
+
