--- a/Javascript/8. function.md
+++ b/Javascript/8. function.md
@@ -1,1 +1,44 @@
 
+```
+function sumAll(...args){
+  let sum=0;
+  
+  for(let arg of args) sum +=arg;
+  
+  return sum;
+}
+alert( sumAll(1);//1
+
+alert(sumAll(1,2); //3
+
+alert(sumAll(1,2,3); //6
+```
+
+# 1. Operator(toán tử):
+
+### `function`
+
+- ***Math.max*** Tìm số lớn nhất: 
+
+```
+alert( Math.max(3,5,1)); //5
+```
+
+but (3,5,1) `!=` [3,5,1]
+
+if 
+
+```
+let arr = [3,5,1];
+
+alert( Math.max(arr)); //NaN
+```
+
+**True**, then: 
+
+```
+let arr = [3,5,1];
+
+alert(Math.max(...arr));  //5
+```
+
