Update 9.  uses of "window".md

--- a/Javascript/9.  uses of "window".md
+++ b/Javascript/9.  uses of "window".md
@@ -1,1 +1,28 @@
 
+# Uses of "window"
+
+usually, it's not a good idea to use it, but here are some examples you can meet.
+
+```
+<iframe src="/" id="frame"></iframe>
+
+<script>
+  alert(innerWidth);
+  alert(Array);
+  
+  iframe.onload = function()
+  {
+    alert(iframe.contentWindow.innerWidth);
+    alert( iframe.contenWindow.Array);
+  };
+</script>
+```
+
+# instanceof:
+
+```
+class Rabbit{}
+let rabbit = new Rabbit();
+
+alert( new Rabbit() instanceof Rabbit);//true
+```
