--- a/Javascript/9.1. Error handing.md
+++ b/Javascript/9.1. Error handing.md
@@ -1,1 +1,148 @@
 
+# The "try...catch" syntax
+
+```
+try{
+  code
+}
+catch (err){
+  // error handling
+  
+}
+```
+![Atom](http://javascript.info/article/try-catch/try-catch-flow@2x.png)
+
+### for example:
+
+*here don't have error* 
+
+
+```
+try{
+
+  alert('bắt đầu chạy'); 
+  //không có lỗi ở đây
+  
+  alert(' kết thúc chạy');
+  }
+  catch(err){
+  
+  alert('catch làm ngơ, vì ở đây không có lỗi');
+  }
+  alert("... tiếp tục thực hiện");
+```
+
+* here have error*
+
+```
+try {
+
+  alert('Start of try runs');  // (1) <--
+
+  lalala; // lỗi, giá trị không định nghĩa được
+
+  alert('End of try (never reached)');  // (2)
+
+} catch(err) {
+
+  alert(`Error has occured!`); // (3) <--
+
+}
+
+alert("...Then the execution continues");
+
+```
+
+# error object
+
+```
+try{
+  //...
+}
+catch(err){
+  //...
+}
+```
+
+- `name` : error name. for an undefined variable that's `"ReferenceError"`.
+
+- `message` : nó nêu ra lỗi sai ở đâu và như thế nào
+
+- `stack` : sử dụng cho mục đích gỡ lỗi.
+
+### for example: 
+
+```
+try {
+  lalala; // error, variable is not defined!
+} catch(err) {
+  alert(err.name); // ReferenceError
+  alert(err.message); // lalala is not defined
+  alert(err.stack); // ReferenceError: lalala is not defined at ...
+
+  // Can also show an error as a whole
+  // The error is converted to string as "name: message"
+  alert(err); // ReferenceError: lalala is not defined
+}
+```
+
+# using "try... catch"
+
+```
+let json = "{ bad json }";
+
+try {
+
+  let user = JSON.parse(json); // <-- when an error occurs...
+  alert( user.name ); // doesn't work
+
+} catch (e) {
+  // ...the execution jumps here
+  alert( "Our apologies, the data has errors, we'll try to request it one more time." );
+  alert( e.name );
+  alert( e.message );
+}
+```
+
+```
+class ValidationError extends Error {
+  constructor(message) {
+    super(message); // (1)
+    this.name = "ValidationError"; // (2)
+  }
+}
+
+function test() {
+  throw new ValidationError("Whoops!");
+}
+
+try {
+  test();
+} catch(err) {
+  alert(err.message); // Whoops!
+  alert(err.name); // ValidationError
+  alert(err.stack); // a list of nested calls with line numbers for each
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
