--- a/Javascript/9.2 $&`'.... .md
+++ b/Javascript/9.2 $&`'.... .md
@@ -1,1 +1,33 @@
 
+|Symbol|inserts                                 |
+|------|----------------------------------------|
+|`$$`  |   ` "$"   `                            |
+|`$& ` | the whole match                        |
+|  $`  | a part of the string before the match  |
+|$'    | a part of the string after the match   |
+|$n    |if n is a 1-2 digit number, then it means the contents of n-th parentheses counting fro left to right|
+
+
+
+## for instance
+
+
+### `$&`
+
+```
+let str = "John Doe, John Smith and John Bull.";
+
+// for each John - replace it with Mr. and then John
+alert(str.replace(/John/g, 'Mr.$&'));
+// "Mr.John Doe, Mr.John Smith and Mr.John Bull.";
+```
+
+### `$1`, `$2`
+
+```
+let str = "John Smith";
+
+alert(str.replace(/(John) (Smith)/, '$2, $1')) // Smith, John
+```
+
+
