Update 1. Khái quát.md

--- a/PHP/1. Khái quát.md
+++ b/PHP/1. Khái quát.md
@@ -1,1 +1,84 @@
 
+## 1. Ngôn ngữ lập trình PHP là gì? (hypertext preprocessor)
+
+- là ngôn gữ lập trình phía server-side được thiết kế để xây dựng và phát triển ứng dụng web.
+
+- .Đặc điểm:
+
++ chạy nhanh trên hệ thống máy chủ
+
++ rất đơn giản
+
++ tốc độ xử lý nhanh và dễ sử dụng
+
++ có nhiều hướng dẫn sử dụng trên mạng
+
++ hoàn toàn miễn phí
+
++ có thể thực thi trên bất cứ hệ điều hành
+
++ không chỉ làm việc với `HTML` mà còn có thể làm việc với ` hình ảnh, PDF, Flash movie, `....
+
++ có thể dễ dàn kết nối với các cơ sở dữ liệu mySQL, mSQL, frontBase, sBase. Solid, ODBC, Oracle, FilePRo,...
+
++ Được sử dụng để xây dựng các FrameWord lớn như: Joomla, Drupal, Zend...
+
++ có nhiều editor hỗ trợ: PHPDesgner, DreamWeaver...
+
+## 2. Wamp Sever: 
+
+- đặc điểm: 
++ có thể cài đặt dễ dàng.
+
++ được cập nhật đều đặn
+
++ rất thuận lời cho việc tạo máy chủ `Web` để chạy thử, xây dựng `Website` bằng `PHP` 
+
++ Hỗ trợ PHP5
+
++ Hoàn toàn miễn phí.
+
+- hướng dẫn cài đặt
+
++ tải tại: http://www.wampserver.com
+
++ thực hiện các bước cài đặt
+
+## 3. xây dựng ứng dụng: 
+
+- tổ chức và lưu trử ứng dụng
+
++ đặt trong thư mục wamp/www
+
++ editor để xây dựng ứng dụng PHP
+
++ **thiết lập trang PHP**
+
++) là một trang tự động
+
++) có charset= UTF-8
+
++) nhúng code PHP vào bằng thẻ PHP
+
++) hiển thị nội dung trên trang bằng thẻ PHP
+
++) hiển thị nội dung trên trang bằng lệnh `echo`
+
++ quy ước
+
++) code PHP được cài đặt trong các thẻ sau: 
+
+| thẻ mở| Thẻ đóng|
+|<?php|?>|
+|<?|?>|
+|<script language="php"|</script>|
+
+- for example: 
+
+```
+<? php echo "<b> Chào các bạn.</b> ?>
+
+<? echo "<b> Chào các bạn.</b>"?>
+
+<script language="php"> echo "<b> Chào các bạn. </b>"</script>
+
