Update 1. Khái quát.md

--- a/PHP/1. Khái quát.md
+++ b/PHP/1. Khái quát.md
@@ -40,7 +40,7 @@
 
 - hướng dẫn cài đặt
 
-+ tải tại: http://www.wampserver.com
++ tải tại:[link](http://www.wampserver.com)
 
 + thực hiện các bước cài đặt
 
@@ -54,21 +54,22 @@
 
 + **thiết lập trang PHP**
 
-+) là một trang tự động
+  +) là một trang tự động
 
-+) có charset= UTF-8
+  +) có charset= UTF-8
 
-+) nhúng code PHP vào bằng thẻ PHP
+  +) nhúng code PHP vào bằng thẻ PHP
 
-+) hiển thị nội dung trên trang bằng thẻ PHP
+  +) hiển thị nội dung trên trang bằng thẻ PHP
 
-+) hiển thị nội dung trên trang bằng lệnh `echo`
+  +) hiển thị nội dung trên trang bằng lệnh `echo`
 
 + quy ước
 
 +) code PHP được cài đặt trong các thẻ sau: 
 
 | thẻ mở| Thẻ đóng|
+|-------|---------|
 |<?php|?>|
 |<?|?>|
 |<script language="php"|</script>|
