Update 2. Một số hàm xử lý.md

--- a/PHP/2. Một số hàm xử lý.md
+++ b/PHP/2. Một số hàm xử lý.md
@@ -1,1 +1,75 @@
+# SOME FUNCTION HANDLING(xử lý) IN PHP:
+
+- **gettype**: put out data type.
+
+- **is_string**: kiểm tra xem có phải kiểu string hay không.
+
+- **is_integer**: kiểm tra xem có phải kiểu integer hay không.
+
+- **is_double**: kiểm tra xem có phải kiểu double hay không.
+
+- **is_array**: kiểm tra xem có phải kiểu mảng hay không.
+
+- **is_object**: kiểm tra có phải là object hay không.
+
+- **isset**: kiểm tra biến đó có giá trị hay không.
+
+- **unset**: gỡ bỏ giá trị của biến đó.
+
+- ** empty**: kiểm tra xem biến đó có rổng hay không.
+
+==> all function if true will pay `true`, else `false`.
+
+*EX:*
+
+```
+$var = "test";
+
+if (isset($var)){
+  echo "variable is set";
+  }
+  
+if (empty($var)){
+echo "varialbe is empty";
+}
+```
+
+- **abs**: tính giá trị tuyệt đối.
+
+- **pow**: bình phương ==> pow(giá trị);
+
+- **ceil**: làm tròn lên ==> ceil (giá trị);
+
+- **floor**: làm tròn thành số nguyên
+
+- **round**: làm tròn sau dấu thập phân.
+
+- ** sqrt**: tính căn.
+
+- **rand**: random một số bất kì ==> rand() or rand (min, max);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
