Update 3. Chuỗi và một số hàm xử lý kiểu chuổi.md

--- a/PHP/3. Chuỗi và một số hàm xử lý kiểu chuổi.md
+++ b/PHP/3. Chuỗi và một số hàm xử lý kiểu chuổi.md
@@ -1,1 +1,70 @@
+# CHUỔI VÀ MỘT SỐ HÀM XỬ LÝ KIỂU CHUỔI
 
+## Kiểu chuổi - String: 
+
+```
+<?php
+    $chuoi="myclass.vn";
+    echo $chuoi; // in ra $chuoi bằng lệnh echo
+    
+    $chuoi2=" hello";
+    echo $chuoi2;
+    
+    echo $chuoi."".$chuoi2; //nối 2 chuổi
+```
+
+if you use `" " ` ==> it will receive var php
+
+if you use `' ' ` ==> it wll not receive var php.
+
+### MỘT SỐ HÀM SỬ LÝ CHUỔI:
+
+- **print** :xuất ra màn hình
+
+- **echo** : xuất ra màn hình.
+
+- **str_pad**: canh lề 2 chuổi.
+
+==>` str_pad(string, length, pad_string, pad_style)`
+
+- **strlen**:đếm số ký tự trong một chuỗi.
+
+- **trim**: loại trừ khoảng trắng trước và sau.
+
+- **str_replace**: thay thế chuổi.
+
+==>` str_replace (chuỗi_tìm, chuỗi _thay_thế,chuỗi_gốc)`
+
+- **strtolower**: chuyển chữ hoa thành chữ thường.
+
+- **strtoupper**: chuyển chữ thường thành chữ hoa.
+
+- **substr**: cắt chuỗi.
+
+==>` substr(chuổi,vị trí bắt đầu, vị trí kết thúc)`
+
+- **strops**: tìm vị trí đầu tiên của chuỗi.
+
+==>`strops(chuỗi, vị trí bắt đầu, vị trí kết thúc);`
+
+- **strrops**:tìm vị trí cuối cùng.
+
+==> `strrops(chuỗi gốc, chuỗi tìm).`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
