--- a/PHP/4.Mảng.md
+++ b/PHP/4.Mảng.md
@@ -1,6 +1,6 @@
 # MẢNG TRONG PHP:
 
-**structure: `Sname = array(value, value);`
+**structure: `Sname = array(value, value);`**
 
 *EX:* 
 ```
@@ -17,7 +17,7 @@ $rice[1]; // giá trị sẽ là cơm bò
 
 ```
 
---> ***Cách gán giá trị cho mảng***
+=>  ***Cách gán giá trị cho mảng***
 
 ```
 $rice[0]="hủ tiếu";
@@ -26,9 +26,9 @@ $rice[1]="phở";
 
 ```
 
-**Ngoài ra có thể khai báo mảng như sau:**
+** Ngoài ra có thể khai báo mảng như sau: **
 
-**`Sname = array ($key => $value)`
+**`Sname = array ($key => $value)`**
 
 EX: 
 ```
@@ -38,7 +38,7 @@ $number = array (1=>"number one", 2=>"number two", 3=> "number three");
 
 ```
 
-***Duyệt mảng: ***
+*** Duyệt mảng: ***
 
 ```
 <?php
