Update 5. Toán tử .md

--- a/PHP/5. Toán tử .md
+++ b/PHP/5. Toán tử .md
@@ -1,1 +1,24 @@
+# TOÁN TỬ TRONG PHP
+
+** PHP có các loại toán tử sau: **
+
+- **Toán tử toán học: **
+
+`+`, `-`, `*`, `/`, `%`, `--`,`++`
+
+- **Toán tử so sánh: **
+
+`==`, `<=`, `>=`, `<`, `>`, `===:so sánh đồng nhất `, `!=`.
+
+- ** Toán tử luận lý: **
+
+`&&` or `and`: và
+
+`||` hoặc `or`: hoặc
+
+`!` không phải.
+
+- ** Toán tử kết hợp: **
+
+`+=`, `-=`, `*=`,`/=`,`%=`
 
