Update 6. Vòng lặp.md

--- a/PHP/6. Vòng lặp.md
+++ b/PHP/6. Vòng lặp.md
@@ -1,1 +1,67 @@
 
+# VÒNG LẶP
+
+- ** for**
+
+- **while...do**
+
+- **do ... while**
+
+- **foreach**: cho phép duyệt qua tất cả các giá trị của mảng mà không cần kiểm tra điều kiện.
+
+==> **Cú pháp: `foreach(mảng as biến){}`**
+
+*EX*: 
+
+```
+
+<?php
+  $cauchao = array("hello", "xinchao","hi");
+  foreach ($cauchao as $giatri)
+  {
+    echo $giatri;
+  }
+?>
+```
+
+*EX*: 
+
+```
+<?php
+  $so = array(1=>"number one", 2=>"number two", 3=>"number three")
+  foreach ($so as $key=>$value)
+  {
+    echo $key."".$valua;
+  }
+?>
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
