Update 7. break and continue.md

--- a/PHP/7. break and continue.md
+++ b/PHP/7. break and continue.md
@@ -1,1 +1,30 @@
+# BREAK AND CONTINUE
 
+* Khi muốn thực hiện vòng lặp, chúng ta không muốn vòng lặp đó chạy hết mà mong muốn vòng lặp dừng lại hoặc bỏ qua vòng lặp ở 1 điều kiện nào đó thì `break` và `continue` sẽ giúp ta thực hiện.*
+
+- **break**: khi vòng lặp đnag chạy haowcj 1 hương thức gặp từ kháo `break` thì lập tức kết thúc vòng lặp hoặc ngắt ngang phương thức đnag thực hiện.
+
+*EX: *
+
+```
+<?php
+  for ( $i =1; $i<5; $i++)
+  {
+    if($i==3) echo $i;
+    break;
+  }
+?>
+
+```
+- **continue**: bỏ qua vòng lặp đó và thực hiện vòng lặp tiếp theo.
+
+``
+<?php
+  for ( $i =1; $i<5; $i++)
+  {
+    if($i==3) continue;
+    echo $i;
+  }
+  // sẽ k in ra mản hình i==3;
+?>
+```
