--- a/PHP/8. Hàm.md
+++ b/PHP/8. Hàm.md
@@ -1,1 +1,48 @@
 
+# HÀM TRONG PHP
+
+*Tác dụng: * 
+
+- Dễ gọi, dễ sử dụng đi nhiều lần.
+
+- Dễ sửa.
+
+- Dễ giải quyết.
+
+## Đối với hàm không có giá trị trả về
+
+```
+function tên_hàm()
+  {
+    dòng lệnh;
+  }
+  
+```
+
+## Đối với hàm có giá trị trả về: 
+
+```
+function tên_hàm(){
+  dòng lệnh;
+  return giá trị;
+  }
+```
+
+## Tham trị và tham biến: 
+
+- Tham trị nghĩa là hàm đó sẽ nhận vào 1 giá trị nào đó để xử lý.
+
+```
+function ten_ham($a,$b){
+  dòng lệnh;
+  }
+```
+
+- tham biến là hàm đó sẽ nhận bào 1 biến đồng thời khi xử lý xong nếu như biến đó thay đổi thì giá trị của biến cũng thay đổi.
+
+```
+function ten_ham(&$a,&$b){
+  dòng lệnh;
+  }
+```
+
