Update 9. include and require.md

--- a/PHP/9. include and require.md
+++ b/PHP/9. include and require.md
@@ -1,1 +1,37 @@
 
+# INCLUDE AND REQUIRE
+
+* cho phép chúng ta ` chèn ` những file `đã tồn tại ` và `coppy` những file đó vào trong file chúng ta đang sử dụng.*
+
+==> rất hữu dụng khi chúng ta sử dụng những đoạn code, JS or JQuery, HTML,... giống nhau và kết hợp những trang đó thành một ` website`.
+
+| incude|require|
+|-------|-------|
+|sau khi chèn `file` nếu có bị lỗi xảy| sau khi chèn `file` nếu có lỗi xảy ra
+ra thì website vẫn tiếp tục chạy các|thì sẽ xuất ra thông báo lỗi và không
+đoạn code tiếp theo|chạy các đoạn code tiếp theo nửa.|
+
+** Cú pháp**: `
+```
+include 'ten_file';
+
+require 'ten_file';
+
+```
+
+or
+
+```
+
+include_once 'ten_file';
+
+require_once 'ten_file';
+
+```
+
+==> chỉ tồn tại khi  `file` đó chèn vào  lần duy nhất nếu như file đó tồn tịa thì nó sẽ không chèn vào nửa.
+
+Ex: 
+
+`include 'a.php';`
+`require 'a.php';`
