--- a/PHP/10.object- class.md
+++ b/PHP/10.object- class.md
@@ -1,1 +1,36 @@
 
+# ĐỐI TƯỢNG CLASS
+
+- `class` là 1 đối tượng chứa tất cả các thuộc tính và phương thức.
+
+*VD: con người là một class
+- thuộc tính: tay, chân,miệng,....
+- phương thức: chạy, đi,nhảy, ăn, nói,...*
+
+**Cú pháp:**
+
+` class ten_class{...}`
+
+*VD*:
+
+```
+class Myclass{
+  $id;
+  $khoahoc;
+  $giangvien;
+    public function set khoahoc($khoahoc){
+      $this -> $khoahoc = $khoahoc;
+      }
+   }
+```
+
+## Tầm vực biến:
+
+- static: truy xuất trực tiếp mà không cần gọi phương thức khởi tạo.
+
+- private: chỉ có lớp hiện tại là được phép truy xuất.
+
+- protected: chỉ cho phép lớp hiện tại và lớp kế thừa truy xuất.
+
+- public: cho phép tất cả các lớp khác truy xuất.
+
