--- a/PHP/11. FORM.md
+++ b/PHP/11. FORM.md
@@ -1,1 +1,185 @@
+# FORM: 
+
+- Được dùng để nhận dữ liệu từ phía người dùng.
+
+- giúp gửi yêu cầu của người dùng đến trang xử lý trong ứng dụng web.
+
+- thẻ form dùng để chứa các thành phần khác của form.
+
+- những thành phần nhập liệu được gọi là `formfield`
+
+**cú pháp**:
+
+```
+<form name = "..." action= "..." method ="..."> 
+
+  các thành phần của form;
+  
+</form>
+```
+
+- action: chỉ định trang web sẽ nhận dữ liệu từ form khi có sự khiện click `button` or `submit`
+
+- form bao gồm các thành phần form file.
+
++ text
+
++ password
+
++ hidden text
+
++ check box
+
++ radio button
+
++ file form control ` (update 1 file up sever)`
+
++ submit button; reset button; generalized button.
+
++ multile - line text
+
++ lable
+
++ pull - down menu
+
++ srolles list
+
++ fiels set
+
+
+#  Cách dùng và cú pháp của các form file:
+
+- ** text field - form **:
+
+```
+<input 
+  type = "text"
+  name = string
+  readonly = 
+  size = variant
+  maxlength = long
+  tabindex = integer
+  value = string
+  ...
+>
+```
+
+- ** file form control**:
+
+``` 
+<form action = "..." method = "post" enctype="multipart/form-data" name = "..." >
+  <input type = "file" name= "...">
+</form>
+```
+
+- **Multiline text field:**
+
++ dùng để nhập nhiều dòng
+
++ cú pháp : 
+
+```
+<textarea
+  cols = long
+  rows = long
+  disable
+  name = string
+  readonly
+  tabindex = integer
+  wrap = off| physical| virtuce
+</textarea>
+
+// trong đó: nếu dùng off thì đoạn mình nhập vào khi chạm nút nó k tự xuống dòng, còn hai cái còn lại thì ngược lại.
+
+```
+
+- **lable- form**:
+
++ dùng để gán nhãn cho 1 form field, đồng thời nhận chuyển các sự kiến đến `formfield`
+
+```
+<lable
+  for = IDstring
+  class= string
+  style = string
+>
+```
+
+
+- ** method: phương thức truyền dẫn**
+  
++ POST
+  
++ GET
+  
++ REQUEST
+
+==> `post/get` cho phép người sử dụng truyền dữ liệu trong form từ trang này sang trang khác.
+
+- Post: các dữ liệu từ form được ` truyền ngầm ` và khối lượng dữ liệu ` không phụ thuộc vào URL`.
+
+- Get: Dữ liệu truyền đi được ` hiển thị` trên trinh duyệt và khối lượng Dữ liệu truyền đi ` phụ thuộc ` vào chiều dài tối đa của `url`.
+
+==> ** để nhận dữ liệu **:
+
+```
+$_POST["name"]
+
+$_GET["name"]
+
+$_REQUEST["name"]
+
+```
+
+## ưu và nhược của POST VÀ GET
+
+- POST:
+
++ bảo mật hơn GET
+
++ không giới hạn dữ liệu truyền đi
+
++ kết quả trang web trả về không bookmark được.
+
++ có thể xảy ra lỗi nếu người dùng muốn quay lại trang kết quả.
+
++ dữ liệu không truyền được cho vấn đề bảo mật.
+
+- GET
+
++ có thể bookmark địa chỉ
+
++ không cần thông qua form
+
++ không thích hợp truyền DL có tính bảo mật như `password`
+
++ dung lượng dữ lệu truyền đi có giới hạn 
+
++ url submit được lưu lại trên sever.==> `vì vậy nó không bảo mật`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
