--- a/CSS/3. Boder.md
+++ b/CSS/3. Boder.md
@@ -1,1 +1,26 @@
 
+# Boder: 
+
+Thuộc tính tạo viền cho phần tử.
+
+**Cấu Trúc: ** `border: [size] [type] [color]`
+
+*Ví dụ*:  nếu muốn tạo 1 viền có kích thước 1px kiểu trơn và màu viền là đỏ thì ta có như sau:
+
+==> **`border: 1px solid red;`**
+
+- Kiểu **type** có một số dạng như sau :
+
+  + solid
+  
+  + dotted
+  
+  + double
+  
+  + groove
+  
+  + ridge
+  
+  + inset
+  
+  + outset
